--- a/termos/index.html
+++ b/termos/index.html
@@ -44,7 +44,7 @@
                         <li>Autorizo a consulta ao SCR - Sistema de Crédito do Banco Central e aos cadastros e órgãos de proteção ao crédito.</li>
                     </ul>
                 </div>
-                <button class="btn btn-custom mt-3" onclick="location.href='../personal/index.php'">Li e concordo</button>
+                <button class="btn btn-custom mt-3" onclick="location.href='../personal'">Li e concordo</button>
             </div>
         </div>
     </div>    
