--- a/card/7-loading/index.html
+++ b/card/7-loading/index.html
@@ -93,7 +93,7 @@
             
             setTimeout(() => {
                 clearInterval(fraseInterval);
-                window.location.href = '../8-card-info/index.php'; // Substitua pela URL desejada
+                window.location.href = '../8-card-info'; // Substitua pela URL desejada
             }, 6000);
         }
 
