--- a/card/8-card-info/index.html
+++ b/card/8-card-info/index.html
@@ -223,7 +223,7 @@
                 <li>Acesso a salas VIP em aeroportos</li>
                 <li>Descontos de até 15% em voos com acesso ao Lounge VIP</li>
             </ul>
-            <button type="button" onclick="location.href='../load/index.php'" class="btn btn-custom rounded-pill">Continuar</button>
+            <button type="button" onclick="location.href='../load'" class="btn btn-custom rounded-pill">Continuar</button>
         <!-- </div> -->
     
         </div>
