--- a/card/index.html
+++ b/card/index.html
@@ -35,12 +35,12 @@
         <div style="margin-top: 40px;" class="main-content">
             <div id="InteresseCard" class="mb-3">
                 <p><strong style="font-size: 18px;">Qual é o seu interesse com um cartão de crédito hoje?</strong></p>
-                <button class="btn btn-custom" onclick="location.href='../card/6-limit/index.php'">Fazer uma compra específica</button>
+                <button class="btn btn-custom" onclick="location.href='../card/6-limit'">Fazer uma compra específica</button>
                 
-                <button class="btn btn-custom" id="maeName" onclick="location.href='../card/6-limit/index.php'">Fazer uma viagem</button>
-                <button class="btn btn-custom" onclick="location.href='../card/6-limit/index.php'">Poder gastar mais</button>
-                <button class="btn btn-custom" onclick="location.href='../card/6-limit/index.php'">Organizar a minha vida financeira</button>
-                <button class="btn btn-custom" onclick="location.href='../card/6-limit/index.php'">Outros</button>
+                <button class="btn btn-custom" id="maeName" onclick="location.href='../card/6-limit'">Fazer uma viagem</button>
+                <button class="btn btn-custom" onclick="location.href='../card/6-limit'">Poder gastar mais</button>
+                <button class="btn btn-custom" onclick="location.href='../card/6-limit'">Organizar a minha vida financeira</button>
+                <button class="btn btn-custom" onclick="location.href='../card/6-limit'">Outros</button>
             </div>
         </div>
     </div>
