--- a/personal/index.html
+++ b/personal/index.html
@@ -79,7 +79,7 @@
             localStorage.setItem('dadosUsuarioUni', JSON.stringify(dadosUsuario));
 
             // Redireciona para a próxima página
-            location.href = '../card/index.php';
+            location.href = '../card';
         }
     </script>
     <script src="js/scriptValida.js"></script>
