--- a/card/recebimento/cep/confirma/index.html
+++ b/card/recebimento/cep/confirma/index.html
@@ -65,7 +65,7 @@
         carregarDadosEndereco();
 
         function confirmarDados() {
-            location.href = 'maneger/index.php';
+            location.href = 'maneger';
         }
         
     </script>
