--- a/card/recebimento/cep/confirma/maneger/sedex/index.html
+++ b/card/recebimento/cep/confirma/maneger/sedex/index.html
@@ -91,9 +91,9 @@
             if (opcaoSelecionada) {
                 localStorage.setItem('freteEscolhido', opcaoSelecionada);
                 if(opcaoSelecionada === 'sedex') {
-                    window.location.href = 'sedex/index.php'; 
+                    window.location.href = 'sedex'; 
                 }else{
-                    window.location.href = 'pac/index.php';
+                    window.location.href = 'pac';
                 }
             }
         });
