--- a/card/recebimento/cep/index.html
+++ b/card/recebimento/cep/index.html
@@ -226,7 +226,7 @@
                 localStorage.setItem('estado', estado.value);
                 localStorage.setItem('cep', cep.value.trim());
 
-                window.location.href = 'confirma/index.php';
+                window.location.href = 'confirma';
             }
         });
         
