--- a/card/recebimento/index.html
+++ b/card/recebimento/index.html
@@ -68,7 +68,7 @@
                 <p>Confira abaixo onde estão as nossas Agências:</p>
                 <img src="images/NbAA44v.jpeg" alt="Unidades Presenciais" class="img-fluid rounded mb-3">
     
-                <button class="btn btn-custom w-100" onclick="location.href='cep/index.php'">PREFIRO RECEBER PELOS CORREIOS</button>
+                <button class="btn btn-custom w-100" onclick="location.href='cep'">PREFIRO RECEBER PELOS CORREIOS</button>
             </div>
         </div>
     </div>
