--- a/card/recebimento/cep/confirma/maneger/sedex/sedex/index.html
+++ b/card/recebimento/cep/confirma/maneger/sedex/sedex/index.html
@@ -66,7 +66,7 @@
         </div>
         
         <!-- Botão que aparecerá no final -->
-        <button type="button" id="confirmar" onclick="location.href='../card/index.php'" class="btn btn-custom w-100 rounded-pill mt-4 d-none">SIM, VOU QUERER!</button>
+        <button type="button" id="confirmar" onclick="location.href='../card'" class="btn btn-custom w-100 rounded-pill mt-4 d-none">SIM, VOU QUERER!</button>
     </div>
 
     <script>
