--- a/card/load/index.html
+++ b/card/load/index.html
@@ -77,7 +77,7 @@
         // Event listener para capturar a escolha e mostrar a próxima seção
         document.querySelectorAll('#vencimento-secao .btn').forEach(button => {
             button.addEventListener('click', function() {
-                window.location.href = '../recebimento/index.php';
+                window.location.href = '../recebimento';
             });
         });
     </script>
